@@ -1,5 +1,6 @@
 Revision history for HTML::Forms
 
+          - Better styling for data2markup output
           - Adds data2markup to utilities
           - Allows info to be placed above the field
           - Removes uses of innerHTML and most eval string in JS
